# mlb-strikeout-predictor

./: .env_example  .gitignore  FLUXO_PIPELINE_ML.md  README.md  betting_data.csv  betting_data_2025-03-30.csv  betting_data_2025-03-31.csv  betting_data_2025-04-02.csv  pitchers_data.csv  predicted_2025-03-30.csv  predicted_2025-03-31.csv  predicted_2025-04-01.csv  predicted_2025-04-02.csv  pyproject.toml  requirements.txt  team_strikeout_percentage.csv
.cursor/rules/: project-context.mdc
astro/: requirements.txt
astro/dags/: betting_odds_dag.py  getting_full_pitchers_details_dag.py
astro/include/: cleaning_and_adding_opp_so_avg.py  config.py
jupyter/: Batting Teams.ipynb  Pitcher ML V1 WebScrapping_season.ipynb
models/: lightgbm_model.pkl  lightgbm_model_backup.pkl  lightgbm_model_features_backup.pkl
notebooks/: exploring.py  exploring__pitcher_strikeout_data.ipynb  exploring__team_strikeout_data.ipynb
src/: Batting Teams.ipynb  ML Strikeout.ipynb  Pitcher ML V1 WebScrapping.ipynb  betting_data_2025-03-30.csv  chatgpt_context.py  cleanup_files.py  data_utils.py  email_ml_predictions.py  email_ml_results.py  exceptions.py  feature_engineering.py  main.py  model_training.py  predictions.py  telegramSender.py  telegram_ml_predictions.py
src/jupyter/: Pitcher ML V1 WebScrapping_lg.ipynb  Pitchers_SO_odds_byDate.ipynb  ml strikeout.ipynb
src/model/: making_predictions.py  model_training.py
src/scrapping/: betting_odds_today.py  (+10 more)
web_scrapping/: Pitchers_SO_odds_byDate.ipynb  Pithcers_SO_odds_byDate.ipynb  request_SO_odds.py  request_odds_V1.py
(+24 files in other folders)
